# ConjunctionAI

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  runs.sh
.github/: FUNDING.yml
bench/: CMakeLists.txt
data/: fuzzy_salix_net.md
data/poll_plant/: README.md  poll.csv
examples/: CMakeLists.txt  fuzzthat.cc
include/cj/: clause.hh  common.hh  fuzzy_classifier.hh  fuzzy_partition.hh  fuzzy_set.hh  rough_set.hh  set.hh  truth.hh
include/cj/c/: api.h
include/cj/data/: data_matrix.hh
include/cj/logics/: clausal_kb.hh  clause.hh  formula.hh  function.hh  fuzzy_classifier.hh  interpretation.hh  markov_logic.hh  predicate.hh  symbols.hh  term.hh
include/cj/math/: confusion.hh  fuzzy_partition.hh  fuzzy_set.hh  graph.hh  information.hh  random.hh  set.hh  statistics.hh  truth.hh
include/cj/stat/: statistics.hh
include/cj/utils/: bounded_multimap.hh  cl_reader.hh  string.hh  top_n_map.hh  top_n_set.hh  value_ptr.hh
include/cj/utils/detail/: match_arg.hh
test/: CMakeLists.txt  formulas.hh  fuzzy_classifier_spec.cc  truth_spec.cc
test/data/: data_matrix_spec.cc
test/logics/: clausal_kb_spec.cc  clause_spec.cc  formula_spec.cc  formulas.hh  fuzzy_classifier_spec.cc
test/math/: confusion_spec.cc  set_spec.cc
test/stat/: confusion_spec.cc
test/utils/: bounded_multimap.cc  top_n_map.cc  top_n_map_spec.cc  top_n_set.cc  top_n_set_spec.cc  value_ptr_spec.cc
